--- a/src/components/Singer/Singer.css
+++ b/src/components/Singer/Singer.css
@@ -1,3 +1,10 @@
+.cardColor{
+    background-color: 		#f5f5f5 ;
+}
+.image{
+    height: 150px;
+    width: 150px;
+}
 .button{
     cursor: pointer;
 }
